make board inputted to fins_steady_state just an input

--- a/episodes/3-fortran-unit-test-syntax/solution/CMakeLists.txt
+++ b/episodes/3-fortran-unit-test-syntax/solution/CMakeLists.txt
@@ -24,7 +24,7 @@ enable_testing()
 #--------------------------------------#
 #             test-drive               #
 #--------------------------------------#
-add_subdirectory("test/test-drive")
+# add_subdirectory("test/test-drive")
 
 #--------------------------------------#
 #               pFUnit                 #
