--- a/docker/Dockerfile.ep-5
+++ b/docker/Dockerfile.ep-5
@@ -6,7 +6,15 @@ WORKDIR /home/vscode/5-testing-parallel-code/challenge
 
 # Fix intentional bug in code
 RUN mv ../solution/test_find_steady_state.pf ./test/ && \
-    sed -i -E 's/.*LINK_LIBRARIES sut.*/LINK_LIBRARIES sut MAX_PES 8/g' test/CMakeLists.txt
+    echo "set(test_find_steady_state_src \${test_srcs})\n\
+list(FILTER test_find_steady_state_src INCLUDE REGEX \".*test_find_steady_state.pf\")\n\
+\n\
+add_pfunit_ctest (pfunit_find_steady_state_tests\n\
+    TEST_SOURCES \${test_find_steady_state_src}\n\
+    LINK_LIBRARIES sut\n\
+    MAX_PES 8\n\
+    )\n\
+" >> test/CMakeLists.txt
 
 # build tests with cmake
 RUN cmake -B build-cmake -DCMAKE_PREFIX_PATH=/home/vscode/pfunit/build/installed && \
