Remove fpm veggies and test-drive from ep 4

--- a/episodes/4-debugging-a-broken-test/challenge/test/CMakeLists.txt
+++ b/episodes/4-debugging-a-broken-test/challenge/test/CMakeLists.txt
@@ -11,7 +11,7 @@ add_library (sut STATIC ${PROJ_SRC_FILES_EXEC_MAIN})
 # List all  test files
 file(GLOB
   test_srcs
-  "${PROJECT_SOURCE_DIR}/test/pfunit/*.pf"
+  "${PROJECT_SOURCE_DIR}/test/*.pf"
 )
 
 # evolve_board tests
