--- a/docker/Dockerfile.ep-2
+++ b/docker/Dockerfile.ep-2
@@ -4,5 +4,7 @@ COPY --chown=vscode episodes/2-intro-to-fortran-unit-tests /home/vscode/2-intro-
 
 WORKDIR /home/vscode/2-intro-to-fortran-unit-tests/solution
 
-# test with fpm
-RUN fpm test
+# test with cmake
+RUN cmake -B build
+RUN cmake --build build
+RUN ctest --test-dir build --output-on-failure
