Manually list tets files as is recommended for using CMake

--- a/episodes/3-writing-your-first-unit-test/challenge/test/pfunit/CMakeLists.txt
+++ b/episodes/3-writing-your-first-unit-test/challenge/test/pfunit/CMakeLists.txt
@@ -6,15 +6,7 @@ set(TEST_DIR "${PROJECT_SOURCE_DIR}/test/pfunit")
 add_library (sut STATIC ${PROJ_SRC_FILES})
 
 # List all test files
-file(GLOB
-    test_srcs
-    "${TEST_DIR}/*.pf"
-)
-
-list(LENGTH test_srcs num_test_srcs)
-if (num_test_srcs EQUAL 0)
-    message(FATAL_ERROR "No .pf files found in: ${TEST_DIR}")
-endif()
+set(test_srcs "test_temp_conversions.pf")
 
 add_pfunit_ctest (pfunit_test_temp_conversions_exec
     TEST_SOURCES ${test_srcs}
