Add Make to ep 3

--- a/episodes/3-writing-your-first-unit-test/solution/pfunit/CMakeLists.txt
+++ b/episodes/3-writing-your-first-unit-test/solution/pfunit/CMakeLists.txt
@@ -5,11 +5,7 @@ set(TEST_DIR "${PROJECT_SOURCE_DIR}/test/pfunit")
 # Create library for src code
 add_library (sut STATIC ${PROJ_SRC_FILES})
 
-# List all test files
-set(test_srcs "test_temp_conversions.pf")
-
 add_pfunit_ctest (pfunit_test_temp_conversions_exec
-    TEST_SOURCES ${test_srcs}
+    TEST_SOURCES "test_temp_conversions.pf"
     LINK_LIBRARIES sut # your application library
     )
-
