--- a/episodes/3-writing-your-first-unit-test/challenge/test/standard_fortran/Makefile
+++ b/episodes/3-writing-your-first-unit-test/challenge/test/standard_fortran/Makefile
@@ -6,7 +6,7 @@ $(BUILD_DIR)/%.o: $(STANDARD_FORTRAN_TEST_DIR)/%.f90 | $(BUILD_DIR)
 	$(FC) -c -J $(BUILD_DIR) -o $@ $<
 
 # Build test executable
-$(STANDARD_FORTRAN_TEST_EXE): $(TEST_OBJS) | $(SRC_OBJS)
-	$(FC) -o $@ $^
+$(STANDARD_FORTRAN_TEST_EXE): $(TEST_OBJS) $(SRC_OBJS)
+	$(FC) -o $@ $?
 
 tests: $(STANDARD_FORTRAN_TEST_EXE)
