--- a/episodes/3-writing-your-first-unit-test/challenge/Makefile
+++ b/episodes/3-writing-your-first-unit-test/challenge/Makefile
@@ -1,6 +1,6 @@
 # Top level variables
 ROOT_DIR = $(shell dirname $(realpath $(firstword $(MAKEFILE_LIST))))
-FC = gfortran
+FC ?= gfortran
 
 #------------------------------------#
 #      Targets for compiling src     #
