--- a/.github/workflows/build-parent-docker-image.yaml
+++ b/.github/workflows/build-parent-docker-image.yaml
@@ -41,6 +41,11 @@ jobs:
           IMAGE_NAME="$(echo "${IMAGE_NAME}" | tr '[:upper:]' '[:lower:]')"
           echo "IMAGE_NAME=${IMAGE_NAME}" >> "${GITHUB_ENV}"
 
+      - name: Free Disk Space (Ubuntu)
+        uses: jlumbroso/free-disk-space@main
+        with:
+          large-packages: false
+
       - name: Build and push to ghcr
         uses: aleskxyz/build-push@main
         with:
