Make default pfunit path the one from the devcontainer

--- a/docker/Dockerfile.ep-3
+++ b/docker/Dockerfile.ep-3
@@ -37,7 +37,7 @@ RUN make clean
 RUN rm -rf build-std
 
 # Build
-RUN FC=/usr/bin/f95 PFUNIT_SOURCE_DIR=/home/vscode/pfunit make tests
+RUN FC=/usr/bin/f95 make tests
 
 # Run pFUnit tests
 RUN ./test/pfunit/tests
