--- a/episodes/3-writing-your-first-unit-test/solution/pfunit/Makefile
+++ b/episodes/3-writing-your-first-unit-test/solution/pfunit/Makefile
@@ -1,4 +1,4 @@
-PFUNIT_SOURCE_DIR ?= $(ROOT_DIR)/../../../pfunit
+PFUNIT_SOURCE_DIR ?= /home/vscode/pfunit
 PFUNIT_VERSION ?= 4.12
 PFUNIT_INCLUDE_DIR = $(PFUNIT_SOURCE_DIR)/build/installed/PFUNIT-$(PFUNIT_VERSION)/include
 
