Remove file globbing

--- a/episodes/6-testing-parallel-code/challenge/test/CMakeLists.txt
+++ b/episodes/6-testing-parallel-code/challenge/test/CMakeLists.txt
@@ -18,40 +18,25 @@ endif()
 
 target_link_libraries(sut "${TO_LINK_TO_SRC}")
 
-# List all  test files
-file(GLOB
-  test_srcs
-  "${PROJECT_SOURCE_DIR}/test/*.pf"
-)
-
 #########################
 # Serial tests
 #########################
 
 # evolve_board tests
-set(test_evolve_board_src ${test_srcs})
-list(FILTER test_evolve_board_src INCLUDE REGEX ".*test_evolve_board.pf")
-
 add_pfunit_ctest (pfunit_evolve_board_tests
-  TEST_SOURCES ${test_evolve_board_src}
+  TEST_SOURCES "${PROJECT_SOURCE_DIR}/test/test_evolve_board.pf"
   LINK_LIBRARIES sut # your application library
   )
 
 # check_for_steady_state tests
-set(test_check_for_steady_state_src ${test_srcs})
-list(FILTER test_check_for_steady_state_src INCLUDE REGEX ".*test_check_for_steady_state.pf")
-
 add_pfunit_ctest (pfunit_check_for_steady_state_tests
-  TEST_SOURCES ${test_check_for_steady_state_src}
+  TEST_SOURCES "${PROJECT_SOURCE_DIR}/test/test_check_for_steady_state.pf"
   LINK_LIBRARIES sut # your application library
   )
 
 # read_model_from_file tests
-set(test_read_model_from_file_src ${test_srcs})
-list(FILTER test_read_model_from_file_src INCLUDE REGEX ".*test_read_model_from_file.pf")
-
 add_pfunit_ctest (pfunit_read_model_from_file_tests
-  TEST_SOURCES ${test_read_model_from_file_src}
+  TEST_SOURCES "${PROJECT_SOURCE_DIR}/test/test_read_model_from_file.pf"
   LINK_LIBRARIES sut # your application library
   )
 
@@ -60,24 +45,21 @@ add_pfunit_ctest (pfunit_read_model_from_file_tests
 #########################
 
 # get_local_grid_info tests
-set(test_get_local_grid_info_src ${test_srcs})
-list(FILTER test_get_local_grid_info_src INCLUDE REGEX ".*test_get_local_grid_info.pf")
-
 add_pfunit_ctest (pfunit_get_local_grid_info_tests
-  TEST_SOURCES ${test_get_local_grid_info_src}
+  TEST_SOURCES "${PROJECT_SOURCE_DIR}/test/test_get_local_grid_info.pf"
   LINK_LIBRARIES sut # your application library
   MAX_PES 4
   )
 
 # exchange_boundaries tests
-set(test_exchange_boundaries_src ${test_srcs})
-list(FILTER test_exchange_boundaries_src INCLUDE REGEX ".*test_exchange_boundaries.pf")
-
 add_pfunit_ctest (pfunit_exchange_boundaries_tests
-  TEST_SOURCES ${test_exchange_boundaries_src}
+  TEST_SOURCES "${PROJECT_SOURCE_DIR}/test/test_exchange_boundaries.pf"
   LINK_LIBRARIES sut # your application library
   MAX_PES 4
   )
 
 # find_steady_state tests
-# Your changes here...
+add_pfunit_ctest (pfunit_find_steady_state_tests
+  TEST_SOURCES "${PROJECT_SOURCE_DIR}/test/test_find_steady_state.pf"
+  LINK_LIBRARIES sut # your application library
+  )
