--- a/episodes/3-writing-your-first-unit-test/solution/pfunit/Makefile
+++ b/episodes/3-writing-your-first-unit-test/solution/pfunit/Makefile
@@ -1,4 +1,4 @@
-PFUNIT_INCLUDE_DIR ?= /home/vscode/pfunit/build/installed/PFUNIT-4.12/include
+PFUNIT_INCLUDE_DIR := /home/vscode/pfunit/build/installed/PFUNIT-4.12/include
 
 # Don't try to include if we're cleaning as this doesn't depend on pFUnit
 ifneq ($(MAKECMDGOALS),clean)
